--- a/ToDo.txt
+++ b/ToDo.txt
@@ -3,3 +3,4 @@ New image for qs_.htm
 Rewrite removal and care (qs_postdive.htm)
 FAQ
 Change Overall Structure(accessories)
+Print Version(No JS structure, seperate images for viewing)
